--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-cloudflare": "^4.4.0"
+	}
 }
