--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-cloudflare": "^4.4.0"
+		"@clerk/clerk-sdk-node": "^5.0.11",
+		"@sveltejs/adapter-cloudflare": "^4.4.0",
+		"clerk-sveltekit": "^0.4.2",
+		"wrangler": "^3.60.2"
 	}
 }
