--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@clerk/clerk-sdk-node": "^5.0.11",
+		"@clerk/backend": "^1.25.5",
 		"clerk-sveltekit": "^0.4.2",
 		"wrangler": "^3.60.2"
 	}
